--- a/index.html
+++ b/index.html
@@ -13,6 +13,123 @@
             <h2>Dua Lipa</h2>
         </div>
     </header>
+
+    <section>
+        <div>
+            <p>
+                If you wanna run away with me <br>
+                I know a galaxy <br>
+                And I can take you for a ride <br>
+                I had a premonition that we fell <br>
+                Into a rhythm <br>
+                Where the music don't stop for life <br>
+                Glitter in the sky <br>
+                Glitter in my eyes <br>
+                Shining just the way I like <br>
+                If you feelin' like you need a little bit of company <br>
+                You met me at the perfect time
+            </p>
+            <p>
+                You want me, I want you, <br>
+                baby My sugarboo, I'm levitating <br>
+                The Milky Way, we're renegading <br>
+                Yeah, yeah, yeah, yeah, yeah
+            </p>
+            <p>
+                I got you, moonlight, you're my starlight <br>
+                I need you all night <br>
+                Come on, dance with me <br>
+                I'm levitating <br>
+                You, moonlight, you're my starlight <br>
+                I need you all night <br>
+                Come on, dance with me <br>
+                I'm levitating
+            </p>
+            <p>
+                I believe that you're for me <br>
+                I feel it in our energy <br>
+                I see us written in the stars <br>
+                We can go wherever, so let's do it now or never <br>
+                Baby, nothing's ever, ever too far <br>
+                Glitter in the sky <br>
+                Glitter in our eyes <br>
+                Shining just the way we are <br>
+                I feel like we're forever, every time we get together <br>
+                But whatever, let's get lost on Mars
+            </p>
+            <p>
+                You want me, I want you, <br>
+                baby My sugarboo, I'm levitating <br>
+                The Milky Way, we're renegading <br>
+                Yeah, yeah, yeah, yeah, yeah
+            </p>
+            <p>
+                I got you, moonlight, you're my starlight <br>
+                I need you all night <br>
+                Come on, dance with me <br>
+                I'm levitating <br>
+                You, moonlight, you're my starlight <br>
+                I need you all night <br>
+                Come on, dance with me <br>
+                I'm levitating
+            </p>
+            <p>
+                You can fly away with me tonight <br>
+                You can fly away with me tonight <br>
+                Baby, let me take you for a ride <br>
+                Yeah, yeah, yeah, yeah, yeah <br>
+                I'm levitating <br>
+                You can fly away with me tonight <br>
+                You can fly away with me tonight <br>
+                Baby, let me take you for a ride <br>
+                Yeah, yeah, yeah, yeah, yeah 
+            </p>
+            <p>
+                My love is like a rocket, watch it blast off <br>
+                And I'm feeling so electric, dance my ass off <br>
+                And even if I wanted to, I can't stop <br>
+                Yeah, yeah, yeah, yeah, yeah x2
+            </p>
+            <p>
+                You want me, I want you, <br>
+                baby My sugarboo, I'm levitating <br>
+                The Milky Way, we're renegading <br>
+                Yeah, yeah, yeah, yeah, yeah
+            </p>
+            <p>
+                I got you, moonlight, you're my starlight <br>
+                I need you all night <br>
+                Come on, dance with me <br>
+                I'm levitating <br>
+            </p>
+            <p>
+                You can fly away with me tonight <br>
+                You can fly away with me tonight <br>
+                Baby, let me take you for a ride <br>
+                Yeah, yeah, yeah, yeah, yeah <br>
+                I'm levitating <br>
+                You can fly away with me tonight <br>
+                You can fly away with me tonight <br>
+                Baby, let me take you for a ride <br>
+                Yeah, yeah, yeah, yeah, yeah 
+            </p>
+            <p>
+                I got you, moonlight, you're my starlight <br>
+                I need you all night <br>
+                Come on, dance with me <br>
+                I'm levitating <br>
+                You, moonlight, you're my starlight <br>
+                I need you all night <br>
+                Come on, dance with me <br>
+                I'm levitating
+            </p>
+            <p>
+                Tekst pochodzi z https://www.tekstowo.pl/piosenka,dua_lipa,levitating.html
+            </p>
+        </div>
+    </section>
+
+
     
 </body>
 </html>
