--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dua Lipa - Levitating</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <div>
-            <h1>Levitating</h1>
-            <h2>Dua Lipa</h2>
+        <div class="container">
+            <h1 class="song-title">Levitating</h1>
+            <h2 class="song-author">Dua Lipa</h2>
         </div>
     </header>
 
     <section>
-        <div>
+        <div class="container">
             <p>
                 If you wanna run away with me <br>
                 I know a galaxy <br>
