--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <h1 class="song-title">Levitating!!!</h1>
-            <h2 class="song-author">Dua Lipa</h2>
+            <h2 class="song-author">Dua Lipa Dua Lipa</h2>
         </div>
     </header>
 
