--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="song-title">Levitating!!!</h1>
+            <h1 class="song-title">Levitating!!!Levitating</h1>
             <h2 class="song-author">Dua Lipa Dua Lipa</h2>
         </div>
     </header>
